feat(doc): 修正Swagger文档中的问题
